Fix task title clipping with checkbox

--- a/frontend/src/stylesheets/_task_item.scss
+++ b/frontend/src/stylesheets/_task_item.scss
@@ -23,8 +23,9 @@ $task_width: 414px;
 }
 
 .task-item-title span {
-    color: grey;
-    font-weight: 500;
+  color: grey;
+  font-weight: 500;
+  margin-right: 1rem;
 }
 
 .task-complete {
